# Game

./: .gitignore  CMakeLists.txt  Game.rc  README.md  bitmap.h  build.bat  button.h  font.cpp  font.h  frame.cpp  frame.h  function.cpp  function.h  game.bat  game.cpp  game.rc  glad.c  graphic.h  graphics.cpp  graphics.h  graphis.cpp  impliment.cpp  layout.h  main.cpp  menu.cpp  menu.h  message.h  object.cpp  object.h  resource.h  setting.cpp  setting.h  shader.h  texture.cpp  texture.h  util.cpp  util.h  vertex.h  window.cpp  window.h
resource/shader/: backdrop.frag  backdrop.vert  rectangle.frag  rectangle.geom  rectangle.vert
